core/cu29_derive/tests/compile_fail/cu_msg/invalid_file_path.rs
use cu29_derive::gen_cumsg;

gen_cumsg!("invalid/path/to/config.ron");

fn main() {}